# RailViz

./: README.md
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/: Cargo.toml  Dockerfile  README.md  diesel.toml  justfile  openapi.yaml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/assets/fonts/: generate-glyphs.sh
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/assets/sprites/: generate-atlas.sh
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/authz/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/authz/src/: authorizer.rs  identity.rs  lib.rs  model.rs  regulator.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/cache/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/cache/src/: client.rs  connection.rs  lib.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/common/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/common/src/: geometry.rs  hash_rounded_float.rs  lib.rs  tracing.rs  units.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/core_client/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/core_client/src/: conflict_detection.rs  etcs_braking_curves.rs  lib.rs  mocking.rs  mq_client.rs  path_properties.rs  pathfinding.rs  signal_projection.rs  simulation.rs  stdcm.rs  version.rs  worker_load.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/core_task/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/core_task/src/: envs.rs  lib.rs  path_properties.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/database/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/database/sql/: init_test_db.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/database/src/: db_connection_pool.rs  lib.rs  tables.rs  tables_patch.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/editoast_derive/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/editoast_derive/src/: annotate_units.rs  error.rs  lib.rs  model.rs  route.rs  search.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/editoast_models/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/editoast_models/src/: authn.rs  document.rs  electrical_profiles.rs  lib.rs  map.rs  pagination.rs  prelude.rs  rolling_stock.rs  rolling_stock_image.rs  sub_category.rs  tags.rs  temporary_speed_limits.rs  towed_rolling_stock.rs  work_schedules.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/fga/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/fga/src/: client.rs  doctest_setup.rs  lib.rs  model.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/fga_derive/src/: lib.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/fga_migrations/: Cargo.toml  README.md  migrations_model.fga
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/fga_migrations/src/: cli.rs  lib.rs  main.rs
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-03-16-172133_model_update_errors/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-03-26-090235_rename_paced_train_fields/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-04-18-101338_infra_version_to_integer/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-04-22-114821_add_category_to_train_schedule_and_paced_train/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-04-24-081446_paced_train_exceptions/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-04-24-135143_rename_rolling_stock_category_to_train_category/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-07-07-122814_rename_category_to_main_category/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-07-09-132115_stdcm-env-scope/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-07-15-104535_rename_train_category_to_train_main_category/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-07-24-085435_add-round-trips/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/migrations/2025-07-31-132308_paced_train_exceptions_category/: down.sql  up.sql
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/osm_to_railjson/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/osm_to_railjson/src/: utils.rs  (+2 more)
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/osrdyne_client/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/schemas/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/search/: Cargo.toml
OSRD/OSRD-Open-Source-Railway-Designer-/editoast/src/: error.rs  main.rs  map.rs
OSRD/OSRD-Open-Source-Railway-Designer-/gateway/: .dockerignore  Cargo.toml  Dockerfile  README.md  gateway.bundled.toml  test_server.py
OSRD/OSRD-Open-Source-Railway-Designer-/gateway/src/: config.rs  config_parser.rs  main.rs
OSRD/OSRD-Open-Source-Railway-Designer-/osrdyne/: Cargo.toml  Dockerfile
OSRD/OSRD-Open-Source-Railway-Designer-/osrdyne/src/: api.rs  config.rs  drivers.rs  key.rs  main.rs  pool.rs  queue_controller.rs
OSRD/OSRD-Open-Source-Railway-Designer-/python/osrd_schemas/: .gitignore  README.md  justfile  pyproject.toml
OSRD/OSRD-Open-Source-Railway-Designer-/python/railjson_generator/: .gitignore  README.md  justfile  pyproject.toml
OSRD/OSRD-Open-Source-Railway-Designer-/tests/: README.md  conftest.py  justfile  pyproject.toml
OSRD/OSRD-Open-Source-Railway-Designer-/tests/fuzzer/: fuzzer.py  fuzzer_stdcm_single_timetable.py
OSRD/OSRD-Open-Source-Railway-Designer-/tests/infra-scripts/: README.md  circle_infra.py  etcs_infra.py  example_script.py  medium_infra.py  nested_switches.py  one_line.py  overlapping_routes.py  small_infra.py  takeover.py  three_trains.py  tiny_infra.py
OSRD/OSRD-Open-Source-Railway-Designer-/tests/tests/: path.py  test_infra.py  test_paced_train.py  test_pathfinding.py  test_regressions.py  test_rolling_stock.py  test_scenario.py  test_stdcm.py  test_timetable.py  test_train_schedule.py  test_with_fuzzer.py
(+1921 files in other folders)
