[package]
edition = "2024"
name = "osrdyne"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
axum-extra = { version = "0.12.1", features = ["query"] }
axum-tracing-opentelemetry = "0.32.1"
bollard = "0.19"
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures-lite = "2.6.1"
http = "1.3.1"
im = "15.1.0"
k8s-openapi = { version = "0.26", features = ["v1_30"] }
kube = { version = "2.0", default-features = false, features = [
  "client",
  "derive",
  "rustls-tls",
] }
lapin = { version = "3.7.1", default-features = false, features = [
  "default-runtime",
  "rustls--ring",
] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
percent-encoding = "2.3.2"
priority-queue = "2.7.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
schemars = "1.0.5"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
smol_str = { version = "0.3.4", features = ["serde"] }
thiserror = "2.0.17"
thunderdome = "0.6.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
