[project]
name = "tests"
version = "0.1.1"
description = "Integration tests"
authors = [{ name = "OSRD Contributors", email = "<contact@osrd.fr>" }]
requires-python = ">=3.11"

dependencies = [
  "osrd-schemas",
  "pytest ~= 7.2.2",
  "pytest-cov ~= 4.1.0",
  "railjson-generator",
  "requests ~= 2.32.2",
]

[project.optional-dependencies]
check = ["pyright ~= 1.1.393", "ruff ~= 0.11.2"]

[tool.pyright]
include = ["conftest.py", "fuzzer", "infra-scripts", "tests"]
exclude = ["**/__pycache__"]
extraPaths = ["../python/osrd_schemas", "../python/railjson_generator"]

[tool.uv.sources]
osrd_schemas = { path = "../python/osrd_schemas/", editable = true }
railjson_generator = { path = "../python/railjson_generator/", editable = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
