[package]
name = "cache"
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
mock = ["redis-test"]

[dependencies]
arcstr.workspace = true
deadpool.workspace = true
deadpool-redis.workspace = true
futures.workspace = true
lz4_flex = { version = "0.11.5", default-features = false, features = [
  "frame",
] }
rand.workspace = true
redis-test = { version = "0.12.0", optional = true } # latest version's 'redis' dependency isn't compatible with deadpool-redis re-export
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
