[package]
name = "core_task"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
cache.workspace = true
core_client.workspace = true
dashmap.workspace = true
deadpool-redis.workspace = true # for trait AsyncCommands
futures.workspace = true
itertools.workspace = true
ordered-float.workspace = true
schemas.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
cache = { workspace = true, features = ["mock"] }
common.workspace = true
core_client = { workspace = true, features = ["mocking_client"] }
http.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
