[package]
name = "editoast_models"
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
testing = []

[dependencies]
chrono.workspace = true
common.workspace = true
database.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_json.workspace = true
editoast_derive.workspace = true
futures.workspace = true
futures-util.workspace = true
geos.workspace = true
mvt.workspace = true
openssl.workspace = true
opentelemetry-semantic-conventions.workspace = true
postgis_diesel.workspace = true
postgres-openssl.workspace = true
regex.workspace = true
schemas.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
url.workspace = true
utoipa.workspace = true

[dev-dependencies]
# The feature 'testing' is needed for all of the doc-tests
database = { path = "../database", features = ["testing"] }
editoast_models = { path = "./", features = ["testing"] }

[lints]
workspace = true
