[package]
name = "fga"
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
test_utilities = ["dep:derive_more", "dep:stdext", "dep:tracing-subscriber"]

[dependencies]
derive_more = { workspace = true, optional = true }
fga_derive = { path = "../fga_derive" }
futures.workspace = true
futures-util.workspace = true
itertools.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
stdext = { workspace = true, optional = true }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
fga = { path = "./", features = ["test_utilities"] }
