[package]
name = "osm_to_railjson"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
geo-types = "0.7.17"
geos.workspace = true
osm4routing = "0.8"
schemas.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
