[package]
name = "schemas"
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
testing = []

[dependencies]
chrono.workspace = true
common.workspace = true
editoast_derive.workspace = true
educe.workspace = true
enum-map.workspace = true
geojson.workspace = true
iso8601 = "0.6.3"
rand.workspace = true
regex.workspace = true
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
thiserror.workspace = true
uom.workspace = true
utoipa.workspace = true
uuid.workspace = true

[lints]
workspace = true
