[project]
name = "osrd_schemas"
version = "0.9.0"
description = ""
authors = [{ name = "OSRD Contributors", email = "contact@osrd.fr" }]
requires-python = ">= 3.11"

dependencies = ["geojson-pydantic ~= 1.0.0", "pydantic ~= 2.7"]

[project.optional-dependencies]
check = ["pyright ~= 1.1.393", "ruff ~= 0.9.5"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["osrd_schemas"]
exclude = ["**/__pycache__"]
